--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,59 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+
+  --gray-900: oklch(19.37% 0.006 300.98);
+  --gray-700: oklch(36.98% 0.014 302.71);
+  --gray-400: oklch(70.9% 0.015 304.04);
+}
+
+h1,
+h2,
+h3 {
+  font-size: 3.125rem;
+  color: var(--gray-900);
+  font-weight: 500;
+  letter-spacing: -0.125rem;
+  margin: 0;
+  font-family:
+    "Inter Tight",
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Helvetica,
+    Arial,
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol";
+}
+
+h2,
+h3 {
+  font-size: 2rem;
+  color: var(--gray-700);
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+  letter-spacing: normal;
+}
+
+p {
+  margin: 0;
+  color: var(--gray-700);
+}
+
+button {
+  &.main-button {
+    font-size: 20px;
+    padding: 25px;
+  }
+}
